# mincomp

./: README.md  build_ffmpeg.sh  pyproject.toml
mincomp/: cli.py
readme-assets/: blank
