[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mincomp"
version = "0.1.0"
description = "A minimal, lightweight video compressor powered by a custom FFmpeg build."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Video Compression Utility" }
]
dependencies = []

[project.scripts]
mincomp = "mincomp.cli:main"

[tool.setuptools.packages.find]
include = ["mincomp*"]

[tool.setuptools.package-data]
# Ensure the compiled binary is included when the python package is installed/distributed
mincomp = ["bin/ffmpeg", "bin/ffmpeg.exe"]