[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mincomp"
version = "0.1.0"
description = "A minimal, lightweight video compressor powered by a custom FFmpeg build."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Video Compression Utility" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",  # Combines linter (flake8/isort) and formatter (black)
]

[project.scripts]
mincomp = "mincomp.cli:main"

[tool.setuptools.packages.find]
include = ["mincomp*"]

[tool.setuptools.package-data]
# Ensure the compiled binary is included when the python package is installed/distributed
mincomp = ["bin/ffmpeg", "bin/ffmpeg.exe"]

# Ruff Configuration
[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), and Isort (I)
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"